site/docs/.vuepress/styles/index.scss
// oklch theme
:root {
  --c-brand-light: #27b5e6;
  --c-tip: #16afe0;
  --c-brand: #009dca;
}

html.dark {
  --c-brand-light: #138cb3;
  --c-brand: #009dca;
  --c-tip: #1583a7;
  --c-tip-title: var(--c-text-accent);
  --c-warning: #e0ad15;
  --c-warning-bg: rgba(255, 197, 23, .05);
  --c-warning-title: #fdca31;
  --c-warning-text: rgba(252, 252, 124, 0.9);
  --c-danger: #fc1e38;
  --c-danger-bg: rgba(237, 60, 80, .06);
  --c-danger-title: #fc2d3b;
  --c-danger-text: rgb(253, 128, 136);
}

html.dark .custom-container.warning code{
  color: rgba(252, 210, 83, 0.9);
  background-color: rgba(255, 197, 23, .1);
}

html.dark .custom-container.danger code{
  color: rgb(252, 83, 83);
  background-color: rgba(237, 60, 80, .15);
}

html.dark .custom-container.warning a{
  color: var(--c-warning);
}

html.dark .custom-container.danger a{
  color: rgb(253, 54, 54);
}

html.dark .custom-container.warning blockquote{
  color: rgba(252, 252, 124, 0.65);
}

html.dark .custom-container.danger blockquote{
  color: rgb(253, 128, 136, 0.7);
}

.custom-container.tip pre code, .custom-container.tip pre[class*="language-"] code,
.custom-container.warning pre code, .custom-container.warning pre[class*="language-"] code,
.custom-container.danger pre code, .custom-container.danger pre[class*="language-"] code {
  color: #fff;
  background-color: transparent;
}

// adjust table background colors to avoid clashes with inline code snippets
html.dark tr:nth-child(2n) {
  background-color: var(--c-bg-lighter);
}

html:not(.dark) tr:nth-child(2n) code {
  background-color: var(--c-bg-lighter);
}

.token.string, .token.char, .token.attr-value, .token.regex, .token.variable {
  color: #6ac0e3;
}

// fix the text color animation for the secondary button on the main page
.home .hero .action-button.secondary {
  transition-property: background-color, color;
}

// apply justify to all articles
.theme-default-content p,
.theme-default-content li {
  text-align: justify;
  text-justify: inter-character;
  hyphens: auto;
}

// neither hyphenate inline code snippets nor links, we are injeting <wbr> tags there
code, a {
  hyphens: none;
}

